--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "marked": "^15.0.12",
     "next-themes": "^0.3.0",
@@ -88,6 +89,6 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^7.0.0"
   }
 }
