--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@uiw/codemirror-theme-dracula": "^4.23.14",
     "@uiw/codemirror-theme-github": "^4.23.14",
     "@uiw/codemirror-theme-solarized": "^4.23.14",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -62,6 +63,7 @@
     "lucide-react": "^0.462.0",
     "marked": "^15.0.12",
     "next-themes": "^0.3.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
